<?xml version="1.0"?>
<package format="2">
  <name>rokubimini_description</name>
  <version>0.0.0</version>
  <description>The rokubimini_description package</description>

  <author email="nastasid@ethz.ch">Dario Nastasi</author>
  <maintainer email="martiwer@mavt.ethz.ch">Martin Wermelinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_logger</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>

</package>
